--- a/A2-POO-Prosit5.vcxproj
+++ b/A2-POO-Prosit5.vcxproj
@@ -126,12 +126,22 @@
     <ResourceCompile Include="app.rc" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CLfichier.h" />
+    <ClInclude Include="CLimages.h" />
+    <ClInclude Include="CLserviceFichier.h" />
+    <ClInclude Include="CLserviceImage.h" />
+    <ClInclude Include="MyForm.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="A2-POO-Prosit5.cpp" />
     <ClCompile Include="AssemblyInfo.cpp" />
+    <ClCompile Include="CLfichier.cpp" />
+    <ClCompile Include="CLimages.cpp" />
+    <ClCompile Include="CLserviceFichier.cpp" />
+    <ClCompile Include="CLserviceImage.cpp" />
+    <ClCompile Include="MyForm.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -145,6 +155,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
